--- a/index.html
+++ b/index.html
@@ -8,3 +8,34 @@
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+
+  <div class="grid">
+    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
+      <figure>
+        <img class="img-flex" src="images/Maerten_van_Heemskerck_-_Panorama_with_the_Abduction_of_Helen_Amidst_the_Wonders_of_the_Ancient_World_-_Walters_37656.jpg" alt="">
+        <figcaption></figcaption>
+      </figure>
+    </div>
+    <h1>The Seven Wonders of the Ancient World</h1>
+    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
+      <figure>
+        <img class="img-flex" src="images/Temple_of_Artemis.jpg" alt="">
+        <figcaption>Temple of Artemis</figcaption>
+      </figure>
+    </div>
+    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
+      <figure>
+        <img class="img-flex" src="images/Colossus_of_Rhodes.jpg" alt="">
+        <figcaption>Colossus of Rhodes</figcaption>
+      </figure>
+    </div>
+    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
+      <figure>
+        <img class="img-flex" src="images/Hanging_Gardens_of_Babylon.jpg" alt="">
+        <figcaption>Hanging Gardens of Babylon</figcaption>
+      </figure>
+    </div>
+  </div>
+
+</body>
+</html>
