--- a/index.html
+++ b/index.html
@@ -11,28 +11,29 @@
 <body>
 
   <div class="grid">
-    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
-      <figure>
-        <img class="img-flex" src="images/Maerten_van_Heemskerck_-_Panorama_with_the_Abduction_of_Helen_Amidst_the_Wonders_of_the_Ancient_World_-_Walters_37656.jpg" alt="">
-        <figcaption></figcaption>
-      </figure>
-    </div>
+    <div class="unit xs-1 s-1 m-1 l-2-3">
+        <img class="img-flex" src="images/panorama.jpg" alt="">
+  </div>
+    <div class="unit xs-1 s-1 m-1 l-1-3">
     <h1>The Seven Wonders of the Ancient World</h1>
+    <p>Remarkable constructions of classical antiquity almost completely lost in time.
+    Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+  </div>
     <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
       <figure>
-        <img class="img-flex" src="images/Temple_of_Artemis.jpg" alt="">
+        <img class="img-flex" src="images/temple.jpg" alt="">
         <figcaption>Temple of Artemis</figcaption>
       </figure>
     </div>
     <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
       <figure>
-        <img class="img-flex" src="images/Colossus_of_Rhodes.jpg" alt="">
+        <img class="img-flex" src="images/man.jpg" alt="">
         <figcaption>Colossus of Rhodes</figcaption>
       </figure>
     </div>
     <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
       <figure>
-        <img class="img-flex" src="images/Hanging_Gardens_of_Babylon.jpg" alt="">
+        <img class="img-flex" src="images/garden.jpg" alt="">
         <figcaption>Hanging Gardens of Babylon</figcaption>
       </figure>
     </div>
