changed image sizes per screen size

--- a/index.html
+++ b/index.html
@@ -19,22 +19,33 @@
     <p>Remarkable constructions of classical antiquity almost completely lost in time.
     Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
   </div>
-    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
+    <div class="unit xs-1 s-1 m-1-3 l-1-4">
       <figure>
         <img class="img-flex" src="images/temple.jpg" alt="">
-        <figcaption>Temple of Artemis</figcaption>
+        <figcaption><strong>Temple of Artemis</strong></figcaption>
+        <p>Date of construction: Circa 550 BC
+        Builders: Greeks
+        Location: Selçuk, Turkey</p>
       </figure>
     </div>
-    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
+    <div class="unit xs-1 s-1-2 m-1-3 l-1-4">
       <figure>
         <img class="img-flex" src="images/man.jpg" alt="">
         <figcaption>Colossus of Rhodes</figcaption>
+        <p>Colossus of Rhodes
+        Date of construction: 292–280 BC
+        Builders: Greeks
+        Location: Rhodes, Greece</p>
       </figure>
     </div>
-    <div class="unit xs-1 s-1-2 m-1-2 l-1-4">
+    <div class="unit xs-1 s-1-2 m-1-3 l-1-4">
       <figure>
         <img class="img-flex" src="images/garden.jpg" alt="">
         <figcaption>Hanging Gardens of Babylon</figcaption>
+        <p>Hanging Gardens of Babylon
+        Date of construction: Circa 600 BC
+        Builders: Babylonians
+        Location: Nineveh, Iraq</p>
       </figure>
     </div>
   </div>
