--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
     <div class="unit xs-1 s-1-2 m-1-3 l-1-4">
       <figure>
         <img class="img-flex" src="images/man.jpg" alt="">
-        <figcaption>Colossus of Rhodes</figcaption>
-        <p>Colossus of Rhodes
-        Date of construction: 292–280 BC
+        <figcaption><strong>Colossus of Rhodes</strong></figcaption>
+        <p>Date of construction: 292–280 BC
         Builders: Greeks
         Location: Rhodes, Greece</p>
       </figure>
@@ -41,9 +40,8 @@
     <div class="unit xs-1 s-1-2 m-1-3 l-1-4">
       <figure>
         <img class="img-flex" src="images/garden.jpg" alt="">
-        <figcaption>Hanging Gardens of Babylon</figcaption>
-        <p>Hanging Gardens of Babylon
-        Date of construction: Circa 600 BC
+        <figcaption><strong>Hanging Gardens of Babylon</strong></figcaption>
+        <p>Date of construction: Circa 600 BC
         Builders: Babylonians
         Location: Nineveh, Iraq</p>
       </figure>
