added dt and dd tags

--- a/index.html
+++ b/index.html
@@ -22,10 +22,17 @@
     <div class="unit xs-1 s-1 m-1-3 l-1-4">
       <figure>
         <img class="img-flex" src="images/temple.jpg" alt="">
-        <figcaption><strong>Temple of Artemis</strong></figcaption>
-        <p>Date of construction: Circa 550 BC
-        Builders: Greeks
-        Location: Selçuk, Turkey</p>
+        <figcaption>
+          <h2>Temple of Artemis</h2>
+          <dl>
+            <dt>Date of construction:</dt>
+            <dd>Circa 550 BC</dd>
+            <dt>Builders:</dt>
+            <dd>Greeks</dd>
+            <dt>Location:</dt>
+            <dd>Selçuk, Turkey</dd>
+          </dl>
+        </figcaption>
       </figure>
     </div>
     <div class="unit xs-1 s-1-2 m-1-3 l-1-4">
