--- a/index.html
+++ b/index.html
@@ -38,22 +38,36 @@
     <div class="unit xs-1 s-1-2 m-1-3 l-1-4">
       <figure>
         <img class="img-flex" src="images/man.jpg" alt="">
-        <figcaption><strong>Colossus of Rhodes</strong></figcaption>
-        <p>Date of construction: 292–280 BC
-        Builders: Greeks
-        Location: Rhodes, Greece</p>
+        <figcaption>
+          <h2>Colossus of Rhodes</h2>
+          <dl>
+            <dt>Date of construction:</dt>
+            <dd>292–280 BC</dd>
+            <dt>Builders:</dt>
+            <dd>Greeks</dd>
+            <dt>Location:</dt>
+            <dd>Rhodes, Greece</dd>
+          </dl>
+        </figcaption>
       </figure>
     </div>
     <div class="unit xs-1 s-1-2 m-1-3 l-1-4">
       <figure>
         <img class="img-flex" src="images/garden.jpg" alt="">
-        <figcaption><strong>Hanging Gardens of Babylon</strong></figcaption>
-        <p>Date of construction: Circa 600 BC
-        Builders: Babylonians
-        Location: Nineveh, Iraq</p>
-      </figure>
-    </div>
+        <figcaption>
+          <h2>Hanging Gardens of Babylon</h2>
+          <dl>
+          <dt>Date of construction:</dt>
+          <dd>Circa 600 BC</dd>
+          <dt>Builders:</dt>
+          <dd>Babylonians</dd>
+          <dt>Location:</dt>
+          <dd>Nineveh, Iraq</dd>
+        </dl>
+      </figcaption>
+    </figure>
   </div>
+</div>
 
 </body>
 </html>
