--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
   <div class="grid">
     <div class="unit xs-1 s-1 m-1 l-2-3">
-        <img class="img-flex" src="images/panorama.jpg" alt="">
-  </div>
+      <img class="img-flex" src="images/panorama.jpg" alt="">
+    </div>
     <div class="unit xs-1 s-1 m-1 l-1-3">
-    <h1>The Seven Wonders of the Ancient World</h1>
-    <p>Remarkable constructions of classical antiquity almost completely lost in time.
-    Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
-  </div>
-    <div class="unit xs-1 s-1 m-1-3 l-1-4">
+      <h1>The Seven Wonders of the Ancient World</h1>
+      <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
+      <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+    </div>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3">
       <figure>
         <img class="img-flex" src="images/temple.jpg" alt="">
         <figcaption>
@@ -35,7 +35,7 @@
         </figcaption>
       </figure>
     </div>
-    <div class="unit xs-1 s-1-2 m-1-3 l-1-4">
+    <div class="unit xs-1 s-1-2 m-1-3 l-1-3">
       <figure>
         <img class="img-flex" src="images/man.jpg" alt="">
         <figcaption>
@@ -51,23 +51,23 @@
         </figcaption>
       </figure>
     </div>
-    <div class="unit xs-1 s-1-2 m-1-3 l-1-4">
+    <div class="unit xs-1 s-1-2 m-1-3 l-1-3">
       <figure>
         <img class="img-flex" src="images/garden.jpg" alt="">
         <figcaption>
           <h2>Hanging Gardens of Babylon</h2>
           <dl>
-          <dt>Date of construction:</dt>
-          <dd>Circa 600 BC</dd>
-          <dt>Builders:</dt>
-          <dd>Babylonians</dd>
-          <dt>Location:</dt>
-          <dd>Nineveh, Iraq</dd>
-        </dl>
-      </figcaption>
-    </figure>
+            <dt>Date of construction:</dt>
+            <dd>Circa 600 BC</dd>
+            <dt>Builders:</dt>
+            <dd>Babylonians</dd>
+            <dt>Location:</dt>
+            <dd>Nineveh, Iraq</dd>
+          </dl>
+        </figcaption>
+      </figure>
+    </div>
   </div>
-</div>
 
 </body>
 </html>
